# shamo

./: README.md  docker-compose.yml
.github/: dependabot.yaml  labels.yml
.github/ISSUE_TEMPLATE/: backend_standard.md  new_feature.md  standard.yml  web_standard.md
.github/actions/backend-setup-rust/: action.yml
.github/actions/web-install-node-packages/: action.yml
.github/workflows/: backend_deploy.yml  backend_deploy_build_on_host.yml  backend_lint.yml  backend_test.yml  infra_lint.yml  infra_terraform_apply.yml  lint.yml  sync_labels.yml  web_ci.yml  web_deploy.yml  web_lint.yml  web_test.yml  web_tsc.yml
_web/: .env.development  .eslintrc.json  package-lock.json
_web/docs/: dependencies_or_dev_dependencies.md
_web/src/app/: layout.tsx
_web/src/components/: README.md
_web/src/hooks/: useMutation.ts
_web/src/types/: shamoApiErrorResponse.ts
api/: Dockerfile  main.go
backend/: .dockerignore  .env.development  .env.production  .env.test  .gitignore  Cargo.toml  Dockerfile  Dockerfile.build_on_host  Dockerfile.sqldef  Makefile  Makefile.toml  README.md  compose.yml  package-lock.json  package.json  rust-toolchain.toml  schema.sql  utils.ts  wrangler.toml
backend/.cargo/: config.toml
backend/docker/cockroach/init/: 1_create_databases.sql
backend/docker/db/init/: 1_create_databases.sql
backend/docs/: architecture.md  openapi.yaml
backend/docs/openapi/models/: common.yml  error.yml  payment.yml  room.yml  room_member.yml  user.yml
backend/docs/openapi/paths/: rooms.yml
backend/domain/: Cargo.toml
backend/domain/src/: lib.rs  repository.rs  room.rs  user.rs
backend/domain/src/repository/: payment_repository.rs  room_repository.rs  test_helper.rs  user_repository.rs
backend/domain/src/room/: member.rs  payment.rs
backend/handler/: Cargo.toml
backend/handler/src/: lib.rs  rooms.rs  users.rs
backend/handler/src/rooms/: members.rs  payments.rs
backend/handler/src/utils/: error.rs
backend/infra/: Cargo.toml
backend/infra/src/: lib.rs  payment_repository.rs  room_query.rs  room_repository.rs  test_helper.rs  user_repository.rs
backend/local/: seed.sql
backend/openapi/: index.yml
backend/openapi/models/: common.yml  error.yml  payment.yml  room.yml  room_member.yml  user.yml
backend/openapi/paths/: rooms.yml  rooms_{room_id}.yml  rooms_{room_id}_payments.yml  rooms_{room_id}_payments_{payment_id}.yml
backend/openapi/responses/: error.yml
backend/src/: error.ts  index.ts  main.rs  payment.ts  room.ts  room_user.ts  user.ts
backend/usecase/: Cargo.toml
backend/usecase/src/: add_payment.rs  command.rs  create_room.rs  get_room.rs  lib.rs  query.rs
backend/usecase/src/command/: payment_command.rs  room_command.rs
backend/usecase/src/query/: room_query.rs
db/: #ib_16384_0.dblwr  auto.cnf  binlog.000001  binlog.000002  binlog.000003  binlog.000004  binlog.000005  binlog.000006  binlog.000007  binlog.000008  binlog.000009  binlog.000010  binlog.000011  binlog.000012  binlog.000013  binlog.000014  binlog.000015  binlog.000016  binlog.000017  binlog.000018  binlog.000019  binlog.000020  binlog.000021  binlog.000022  binlog.000023  binlog.000024  binlog.000025  binlog.000026  binlog.000027  binlog.000028  binlog.000029  binlog.000030  binlog.000031  binlog.000032  ca-key.pem  ca.pem  client-cert.pem  client-key.pem  ib_buffer_pool  private_key.pem  (+3 more)
db/mysql/: general_log_211.sdi  slow_log_212.sdi
db/performance_schema/: accounts_145.sdi  binary_log_trans_188.sdi  cond_instances_82.sdi  data_lock_waits_161.sdi  data_locks_160.sdi  error_log_83.sdi  events_errors_su_139.sdi  events_errors_su_140.sdi  events_errors_su_141.sdi  events_errors_su_142.sdi  events_errors_su_143.sdi  events_stages_cu_111.sdi  events_stages_hi_112.sdi  events_stages_hi_113.sdi  events_stages_su_114.sdi  events_stages_su_115.sdi  events_stages_su_116.sdi  events_stages_su_117.sdi  events_stages_su_118.sdi  events_statement_119.sdi  events_statement_120.sdi  events_statement_121.sdi  events_statement_122.sdi  events_statement_123.sdi  events_statement_124.sdi  events_statement_125.sdi  events_statement_126.sdi  events_statement_127.sdi  events_statement_128.sdi  events_statement_129.sdi  events_statement_130.sdi  events_transacti_131.sdi  events_transacti_132.sdi  events_transacti_133.sdi  events_transacti_134.sdi  events_transacti_135.sdi  events_transacti_136.sdi  events_transacti_137.sdi  events_transacti_138.sdi  events_waits_cur_84.sdi  (+68 more)
db/sample/: payments.ibd  rooms.ibd  users.ibd
db/sys/: sys_config.ibd
docs/: why_use_cloud_run_original_domain_at_backend.md
front/app/: .eslintcache  package-lock.json  package.json
front/app/src/: App.js
infra/: .gitignore  .terraform.lock.hcl  README.md  dns.tf  main.tf  providers.tf  state_storage.tf  versions.tf
new_backend/: Taskfile.yaml  package-lock.json  package.json  schema.sql  utils.ts  wrangler.toml
new_backend/docs/: er_diagram.md  openapi.yaml
new_backend/src/: error.ts  id.ts  index.ts  payment.ts  room.ts  room_user.ts  user.ts
newweb/: biome.json  package-lock.json  package.json  worker-configuration.d.ts  wrangler.toml
newweb/src/: Room.tsx  RoomHistory.tsx  RoomLayout.tsx  shamoapi.ts  type.ts
newweb/src/component/: LinkButton.tsx  Loading.tsx
web/: .env.development  .env.production  .eslintrc.json  .gitignore  .npmrc  .prettierignore  README.md  biome.json  index.html  jest.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  worker-configuration.d.ts  wrangler.toml
web/app/: root.tsx  utils.ts
web/app/component/: link_button.tsx
web/app/routes/: rooms.$roomId._index.tsx  rooms.$roomId.history.tsx  rooms.$roomId.tsx
web/app/shamo_api/: client.ts
web/docs/: favicon.md  prettier_or_eslint.md
web/functions/: [[path]].ts
web/public/: mockServiceWorker.js
web/src/: Room.tsx  RoomHistory.tsx  RoomLayout.tsx  ThemeProvider.tsx  main.css  main.tsx  utils.ts
web/src/app/: layout.tsx  loading.tsx  page.tsx
web/src/component/: ThemeToggleButton.tsx
web/src/components/: README.md
web/src/hooks/: useQuery.ts
(+73 files in other folders)
