[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
  "infra",
  "handler",
  "usecase",
  "domain"
]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.32.0", features = ["full"] }

# DB client
sqlx = { version = "0.7.1", features = ["runtime-tokio", "postgres", "tls-rustls", "bigdecimal"] }

# For dotenv
dotenvy = "0.15.7"

# For error handling
anyhow = "1.0.75"

# uuid
uuid = { version = "1.4.1", features = ["v7", "serde"] }

async-trait = "0.1.73"

[dependencies]
# Async runtime
tokio = { workspace = true }

# Web framework
axum = { version = "0.6.20", features = ["tracing", "macros"] }
tower-http = { version = "0.4.4", features = ["trace", "cors"] }

# Logger
tracing = "0.1.26"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

# Serialization / Deserialization
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

dotenvy = { workspace = true }

handler = { path = "./handler" }

sqlx = { workspace = true }
# chrono
# anyhow = "1.0.71"
