[package]

name = "backend"
version = "0.1.0"
edition = "2021"

[workspace]

members = [
  "infra",
  "handler",
  "usecase",
  "domain"
]

[workspace.dependencies]

# Async runtime
tokio = { version = "1.32.0", features = ["full"] }

# Web framework
axum = { version = "0.6.20", features = ["tracing", "macros"] }

# DB client
sqlx = { version = "0.7.1", features = ["runtime-tokio", "postgres", "tls-rustls", "bigdecimal"] }

# Error handling
anyhow = "1.0.75"

# Serialization / Deserialization
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

# uuid
uuid = { version = "1.4.1", features = ["v7", "serde"] }

# For defining Trait with async fn
async-trait = "0.1.73"

# dotenv
dotenvy = "0.15.7"

[dependencies]

# Web server utils
tower-http = { version = "0.4.4", features = ["trace", "cors"] }

# Tracing
tracing = "0.1.26"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

tokio = { workspace = true }
axum = { workspace = true }
sqlx = { workspace = true }
dotenvy = { workspace = true }

handler = { path = "./handler" }
