[package]
name = "domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Serialization / Deserialization
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

uuid = { workspace = true }

sqlx = { workspace = true }

async-trait = { workspace = true }
