[package]
name = "handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Web framework
axum = { version = "0.6.20", features = ["tracing"] }

# Serialization / Deserialization
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

# DB client
sqlx = { version = "0.7.1", features = ["runtime-tokio", "postgres", "uuid", "tls-rustls"] }

# uuid
uuid = { version = "1.4.1", features = ["v4", "serde"] }

infra = { path = "../infra" }
domain = { path = "../domain" }
