[package]
name = "handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["tracing"] }

serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

sqlx = { workspace = true }

infra = { path = "../infra" }
domain = { path = "../domain" }
