[package]
name = "infra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Async runtime
tokio = { workspace = true }

# DB client
sqlx = { version = "0.7.1", features = ["runtime-tokio", "postgres", "uuid", "tls-rustls", "bigdecimal"] }
bigdecimal = "0.4.1"

# uuid
uuid = { version = "1.4.1", features = ["v4", "serde"] }

dotenvy = { workspace = true }

domain = { path = "../domain" }
