[package]
name = "infra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Async runtime
tokio = { workspace = true }

# DB client
sqlx = { workspace = true }
bigdecimal = "0.4.1"

dotenvy = { workspace = true }

domain = { path = "../domain" }
