[package]
name = "infra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bigdecimal = "0.4.1"

tokio = { workspace = true }
sqlx = { workspace = true }
async-trait = { workspace = true }
dotenvy = { workspace = true }

usecase = { path = "../usecase" }
domain = { path = "../domain" }
